@@ -1,0 +1,40 @@
+==========================================
+ZBar -- read barcodes from images or video
+==========================================
+
+The ZBar Bar Code Reader is a library for scanning and decoding bar
+codes from various sources such as video streams, image files or raw
+intensity sensors.  It supports EAN, UPC, Code 128, Code 39 and
+Interleaved 2 of 5.  These are the Python bindings for the library.
+
+Check the ZBar project home page for the latest release, mailing
+lists, etc.
+    http://zbar.sourceforge.net/
+
+
+Installation
+------------
+
+To install this module type the following:
+
+   ptython setup.py install
+
+Dependencies
+------------
+
+This module requires the ZBar Bar Code Reader, which may be obtained
+from:
+    http://zbar.sourceforge.net/
+
+Examples
+--------
+
+TBD
+
+Copyright and License
+---------------------
+
+Licensed under the GNU Lesser General Public License, version 2.1.
+http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt
+
+Copyright 2008-2009 (c) Jeff Brown <spadix@users.sourceforge.net>
